fixed mobileButton visibility

--- a/src/app/components/UI/mobileButton.module.css
+++ b/src/app/components/UI/mobileButton.module.css
@@ -1,6 +1,6 @@
 .mobileButton {
  position: fixed;
- bottom: 150px;
+ bottom: 100px;
  right: 30px;
  cursor: pointer;
  z-index: 100;
